--- a/app/assets/stylesheets/pages/wine_show.scss
+++ b/app/assets/stylesheets/pages/wine_show.scss
@@ -282,3 +282,9 @@
     color: #ffffff;
   }
 }
+.btn-delete-wine {
+  cursor: pointer;
+  z-index: 10;
+  touch-action: manipulation;
+  min-height: 44px; 
+}
