--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -105,8 +105,11 @@
         <% end %>
       <% end %>
 
-      <%= button_to storage_wine_path(@storage, @wine), method: :delete, class: "btn-action btn-delete", data: { turbo_confirm: "Êtes-vous sûr de vouloir supprimer ce vin ?" } do %>
-        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+<%= button_to storage_wine_path(@storage, wine),
+              method: :delete,
+              form: { data: { turbo_confirm: "Êtes-vous sûr de vouloir supprimer ce vin ?" } },
+              class: "btn-delete-wine" do %>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <polyline points="3 6 5 6 21 6"></polyline>
           <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
         </svg>
